--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ github.event.inputs.repository }}
-          ref: ${{ github.event.inputs.repository }}
+          ref: ${{ github.event.inputs.ref }}
 
       - name: Build Clojure from Source
         run: |
