--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,6 +34,11 @@ jobs:
           repository: ${{ github.event.inputs.repository }}
           ref: ${{ github.event.inputs.ref }}
 
+      - name: Debug
+        run: |
+          pwd
+          ls -la
+
       - name: Build Clojure from Source
         run: |
           cd clojure
