--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ inputs.javaVersion }}
@@ -44,9 +44,10 @@ jobs:
       - name: Create dev-local.edn
         run: |
           mkdir $HOME/.datomic
+          pwd
           cd $HOME/.datomic
           echo '{:storage-dir "/home/runner"}' > dev-local.edn
-          cd $HOME
+#          cd $HOME
 
       - name: Checkout Integration Test Source Code
         uses: actions/checkout@v4
