--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -61,5 +61,5 @@ jobs:
         run: |
           pwd
           ls -la
-#          cd test-source
+          cd test-source
 #          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "1.12.0-master-SNAPSHOT"}}}' -M:test datomic
