--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -48,7 +48,6 @@ jobs:
           ls -la
           cd $HOME/.datomic
           echo '{:storage-dir "/home/runner"}' > dev-local.edn
-#          cd $HOME
 
       - name: Checkout Integration Test Source Code
         uses: actions/checkout@v4
@@ -62,4 +61,4 @@ jobs:
           pwd
           ls -la
           cd test-source
-#          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "1.12.0-master-SNAPSHOT"}}}' -M:test datomic
+          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "1.12.0-master-SNAPSHOT"}}}' -M:test datomic
