--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -56,6 +56,13 @@ jobs:
           ref: 'main'
           path: 'test-source'
 
+      - name: Install CLI
+        run: |
+          curl -L -O https://github.com/clojure/brew-install/releases/latest/download/posix-install.sh
+          chmod +x posix-install.sh
+          sudo ./posix-install.sh
+          clojure
+
       - name: Run Tests
         run: |
           pwd
