--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -63,9 +63,16 @@ jobs:
           sudo ./posix-install.sh
           clojure
 
+      - name: Determine latest snapshot version
+        id: latest_snapshot
+        run: |
+          chmod +x ./scripts/find-latest-snapshot.sh
+          ./scripts/find-latest-snapshot.sh
+#          echo "LATEST_SNAPSHOT=$LATEST_SNAPSHOT" >> $GITHUB_ENV
+
       - name: Run Tests
         run: |
           pwd
           ls -la
           cd test-source
-          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "1.12.0-master-SNAPSHOT"}}}' -M:test datomic
+          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version $LATEST_SNAPSHOT}}}' -M:test datomic
