--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -75,4 +75,4 @@ jobs:
           pwd
           ls -la
           cd test-source
-          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version $LATEST_SNAPSHOT}}}' -M:test datomic
+          clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "$LATEST_SNAPSHOT"}}}' -M:test datomic
