--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -74,10 +74,5 @@ jobs:
         run: |
           cd $HOME/.m2/repository/org/clojure/clojure
           LATEST_SNAPSHOT=$(find . -type d -name "*-SNAPSHOT" -exec basename {} \; | sort -V | tail -n 1)
-          pwd
-          ls -la
-          cd ~
-          echo "Now for something completely different."
-          pwd
-          ls -la
+          cd /home/runner/work/test-source
           clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "$LATEST_SNAPSHOT"}}}' -M:test datomic
