--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -72,8 +72,8 @@ jobs:
 
       - name: Run Tests
         run: |
-          cd $HOME/.m2/repository/org/clojure/clojure
-          LATEST_SNAPSHOT=$(find . -type d -name "*-SNAPSHOT" -exec basename {} \; | sort -V | tail -n 1)
+          chmod +x ./test-source/scripts/find-latest-snapshot.sh
+          ./test-source/scripts/find-latest-snapshot.sh
           cd /home/runner/work/clojure-integration-tests/clojure-integration-tests/test-source
           echo "Here is what we have.: ${{ env.LATEST_SNAPSHOT }}"
           clojure -Srepro -Sdeps '{:deps {org.clojure/clojure {:mvn/version "${{ env.LATEST_SNAPSHOT }}"}}}' -M:test datomic
