--- a/.github/workflows/test-datomic.yml
+++ b/.github/workflows/test-datomic.yml
@@ -48,13 +48,13 @@ jobs:
           ref: 'main'
           path: 'test-source'
 
-      - name: Create dev-local.edn
-        run: |
-          mkdir $HOME/.datomic
-          cd $HOME/.datomic
-          pwd
-          ls -la
-          echo '{:storage-dir "/home/runner/.datomic"}' > dev-local.edn
+#      - name: Create dev-local.edn
+#        run: |
+#          mkdir $HOME/.datomic
+#          cd $HOME/.datomic
+#          pwd
+#          ls -la
+#          echo '{:storage-dir "/home/runner/.datomic"}' > dev-local.edn
 
       - name: Install CLI
         run: |
